# ledger

./: .envrc  .gitignore  README.md  ledger.yaml  main.py  pyproject.toml
src/cli/: invoice.py
src/etl/: categorizer.py  ingestor.py  remainder.py
src/invoice/: agent.py  pdf.py
src/ledger/: __init__.py
src/models/: category.py
src/runtime/: duck.py
src/structs/: category.py  ledger.py  model.py
src/structs/runtime/: duck.py
src/structs/runtime/v2/: duck.py
