[project]
name = "ledger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bianca Correa", email = "me@aquabianca.dev" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.3",
    "deepagents>=0.5.8",
    "langchain>=1.2.18",
    "pypdfium2>=5.8.0",
]

[project.scripts]
ledger = "ledger:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::LangChainPendingDeprecationWarning",
]
