[project]
name = "ledger"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bianca Correa", email = "me@aquabianca.dev" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.3",
    "deepagents>=0.5.8",
    "duckdb>=1.1.0",
    "langchain>=1.2.18",
    "pypdfium2>=5.8.0",
]

[project.scripts]
ledger = "ledger:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::LangChainPendingDeprecationWarning",
]
